Fix loader on iphone (hopefully), better centering for registry photo

--- a/app/Loader.scss
+++ b/app/Loader.scss
@@ -16,11 +16,11 @@ $heart-size: 2em;
 
 .loaderCover {
   background-color: $color-white;
-  bottom: 0;
+  height: 100vh;
   left: 0;
   position: fixed;
-  right: 0;
   top: 0;
+  width: 100vw;
   z-index: 2000;
 }
 
